Fix some content/background overflow issues with commit graph lists
Summary: Ref T13552. There are currently some content overflow issues on the graph view where the menu height can exceed the content height and the frame is drawn on a sub-element. Make the frame draw around all the content.

Test Plan: Viewed commit graph history view, saw more sensible UI.

Maniphest Tasks: T13552

Differential Revision: https://secure.phabricator.com/D21440

--- a/webroot/rsrc/css/phui/object-item/phui-oi-list-view.css
+++ b/webroot/rsrc/css/phui/object-item/phui-oi-list-view.css
@@ -736,10 +736,9 @@ ul.phui-oi-list-view .phui-oi-selectable
 .device-desktop .phui-oi-menu,
 .device-tablet .phui-oi-menu {
   width: 200px;
-  border-width: 0 0 1px 1px;
+  border-width: 0 0 0 1px;
 }
 
 .device-phone .phui-oi-menu {
-  border-width: 0 0 1px;
-  margin-bottom: 12px;
+  border-width: 1px 0 0;
 }
